<resources>
    <string name="app_name">我的应用作品集</string>
    <drawable name="clr_normal">	#C0C0C0</drawable>
    <drawable name="clr_pressed">#ff0000</drawable>
    <string name="text">我的应用作品集</string>
    <string name="button1">热门电影</string>
    <string name="button2">股票雄鹰</string>
    <string name="button3">XYZ阅读器</string>
    <string name="button4">最新闻</string>
    <string name="button5">毕业设计</string>
</resources>
