<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text" />
    <Button
        style="@style/CustomStyle"
        android:id="@+id/button1"
        android:text="@string/button1"
        android:onClick="btnClick"
        />
    <Button
        style="@style/CustomStyle"
        android:id="@+id/button2"
        android:text="@string/button2"
        android:layout_marginTop="10dp"
        android:onClick="btnClick"
        />
    <Button
        style="@style/CustomStyle"
        android:id="@+id/button3"
        android:text="@string/button3"
        android:layout_marginTop="12dp"
        android:onClick="btnClick"
        />
    <Button
        style="@style/CustomStyle"
        android:id="@+id/button4"
        android:text="@string/button4"
        android:layout_marginTop="14dp"
        android:onClick="btnClick"
        />
    <Button
        style="@style/CustomStyle"
        android:id="@+id/button5"
        android:text="@string/button5"
        android:layout_marginTop="16dp"
        android:onClick="btnClick"
        />
</LinearLayout>